# ewstools

./: .DS_Store (1)  .coverage  .gitignore  .readthedocs.yaml  .travis.yml  .zenodo.json  README.md  algebra_comp.nb  codecov.yml  convert_SavedModel_to_h5.py  convert_keras_model_format.py  dev_instructions.txt  ews_bootstrap.py  ews_compute.py  ews_compute2.py  ews_compute_run.py  ews_compute_runMulti.py  ews_compute_test.py  ews_spec.py  ews_spec_test.py  ews_std.py  ews_std_runMulti  ews_std_runMulti.py  ews_std_test.py  pandas_playground.py  pandas_tseries_playground.py  pandas_tseries_playground2.py  paper.bib  paper.md  pyproject.toml  requirements.txt  requirements_dev.txt  roll_window_test  roll_window_test2.py  roll_window_test3.py  roll_window_test4  setup.py  smooth.py  standard_ews  standard_ews.py  (+8 more)
bootstrap/: README.md  bootstrap_stat.py  roll_bootstrap.py  script_ews_bootstrap.py  script_may_moments  script_ricker_moments
demos/: Untitled.ipynb  ews_bootstrap.ipynb  ews_fold.ipynb  readme.md  tutorial_1.ipynb
dist 2/: ewstools-0.0.4-py3-none-any.whl
docs/: .readthedocs.yaml  conf.py
ewstools/: __init__.py  core.py  eval_recon.py  ews_compute.py  ewstools.py  helperfuns.py  helpers.py  models.py
ewstools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: ews_bootstrap.ipynb  ews_single.ipynb  ews_spec_run.py  readme.md
helper_funs/: __init__.py  helper_funs.py
mystic/: datafit.py  specfit.py
nat_comms/: README.md  script_data_analysis.py  script_ricker_flip.py  script_ricker_fold.py
paper/: paper.bib  paper.md
(+265 files in other folders)
